--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "clean": "rm -rf .next",
+    "demo": "next dev -p 4000"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "babel-plugin-styled-components": "^2.1.4",
-    "i18next": "^24.0.2",
-    "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^3.0.1",
     "next": "15.0.3",
+    "next-intl": "^3.25.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
-    "react-i18next": "^15.1.2",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
