--- a/package.json
+++ b/package.json
@@ -15,15 +15,23 @@
     "demo": "next dev -p 4000"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^3.4.0",
+    "@chakra-ui/theme": "^3.4.6",
+    "@chakra-ui/theme-tools": "^2.2.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "babel-plugin-styled-components": "^2.1.4",
-    "next": "15.0.3",
+    "next": "^15.1.5",
     "next-intl": "^3.25.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next-themes": "^0.4.4",
+    "process": "^0.11.10",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
-    "styled-components": "^6.1.13"
+    "react-icons": "^5.4.0",
+    "styled-components": "^6.1.14",
+    "web-monorepo-ui-components": "1.0.23"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
