--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
     "styled-components": "^6.1.14",
-    "web-monorepo-ui-components": "1.0.23"
+    "toastify-js": "^1.12.0",
+    "web-monorepo-ui-components": "1.0.25"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
