--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
+    "build:analyze": "ANALYZE=true next build",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
@@ -26,6 +27,7 @@
     "next-intl": "^3.25.3",
     "next-themes": "^0.4.4",
     "process": "^0.11.10",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
@@ -48,6 +50,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "prettier": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
