--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-styled-boilerplate",
+  "name": "mm-front-boilerplate",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -35,7 +35,7 @@
     "react-icons": "^5.4.0",
     "styled-components": "^6.1.14",
     "toastify-js": "^1.12.0",
-    "web-monorepo-ui-components": "1.0.45"
+    "mm-front-components": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
